--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <input type="checkbox" class="form-check-input" id="remember">
                     <label class="form-check-label" for="remember">Remember Password</label>
                 </div>
-                <a href="#">Forgot Password?</a>
+                <a href="#">¿Olvidó la Contraseña?</a>
             </div>
             <button type="submit" class="btn mt-5 rounded-pill btn-lg btn-custom btn-block text-uppercase">Log in</button>
             <p class="mt-3 font-weight-normal">Don't have an account? <a href="#"><strong>Register Now</strong></a></p>
